funciona todo menos el get_all_notes

--- a/P4-Desacoplada/lambda_src/delete_note/Dockerfile
+++ b/P4-Desacoplada/lambda_src/delete_note/Dockerfile
@@ -2,7 +2,7 @@
 FROM public.ecr.aws/lambda/python:3.11
 
 # Establecer el directorio de trabajo
-WORKDIR ${LAMBDA_TASK_ROOT}
+WORKDIR /var/task
 
 # --- RUTAS CORREGIDAS ---
 # Copia el requirements.txt DESDE la subcarpeta create_note
@@ -10,10 +10,11 @@ COPY lambda_src/delete_note/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copia el CÓDIGO COMÚN (relativo a lambda_src)
-COPY lambda_src/app/ ./app/
+COPY lambda_src/app/db/ /var/task/db
+COPY lambda_src/app/models/ /var/task/models
 
 # Copia el main.py DESDE la subcarpeta create_note
-COPY lambda_src/create_note/main.py .
+COPY lambda_src/delete_note/main.py .
 # --- FIN DE CORRECCIONES ---
 
 # Apuntar al handler
